After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749534 - dashdemux: Some suspicious compiler warnings about checking if the unsigned segment index is smaller than 0
dashdemux: Some suspicious compiler warnings about checking if the unsigned s...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal major
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-05-18 08:12 UTC by Sebastian Dröge (slomo)
Modified: 2015-05-25 12:51 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastian Dröge (slomo) 2015-05-18 08:12:47 UTC
These probably cause reverse playback to fail in some way, and should probably be fixed by making the segment index signed.



gstmpdparser.c:3731:31: error: comparison of unsigned expression < 0 is always false
      [-Werror,-Wtautological-compare]
    if (stream->segment_index < 0)
        ~~~~~~~~~~~~~~~~~~~~~ ^ ~
gstmpdparser.c:3754:31: error: comparison of unsigned expression < 0 is always false
      [-Werror,-Wtautological-compare]
    if (stream->segment_index < 0) {
        ~~~~~~~~~~~~~~~~~~~~~ ^ ~
gstmpdparser.c:3759:31: error: comparison of unsigned expression < 0 is always false
      [-Werror,-Wtautological-compare]
    if (stream->segment_index < 0)
        ~~~~~~~~~~~~~~~~~~~~~ ^ ~
gstmpdparser.c:3784:33: error: comparison of unsigned expression < 0 is always false
      [-Werror,-Wtautological-compare]
      if (stream->segment_index < 0) {
          ~~~~~~~~~~~~~~~~~~~~~ ^ ~
gstmpdparser.c:3908:52: error: comparison of unsigned expression >= 0 is always true
      [-Werror,-Wtautological-compare]
    if (seg_idx < stream->segments->len && seg_idx >= 0)
                                           ~~~~~~~ ^  ~
5 errors generated.
Comment 1 Thiago Sousa Santos 2015-05-18 16:19:16 UTC
Thanks for reporting  I have a local fix that I'm testing and should push by the end of the week.
Comment 2 Thiago Sousa Santos 2015-05-25 12:51:19 UTC
commit 0910540d58f4c7f0c029b3b80e7eaf4a8e2ab4d5
Author: Thiago Santos <thiagoss@osg.samsung.com>
Date:   Mon May 18 22:33:50 2015 -0300

    dashdemux: use signed integet to represent segment index
    
    We need to be able to represent -1 to check when we are EOS
    on reverse playback and unsigned integer won't allow that.
    
    CID #1298193
    CID #1298194
    CID #1298195
    
    https://bugzilla.gnome.org/show_bug.cgi?id=749534